// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the structural planner > plans boundary.ts (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "greetInGerman",
        "greetInRussian",
      ],
      "range": {
        "end": 359,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "greetInJapanese",
        "farewell",
      ],
      "range": {
        "end": 868,
        "start": 493,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "typescript",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.c (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "MAX_PATH_BYTES",
        "parse_config",
      ],
      "range": {
        "end": 252,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 4 sibling nodes (2 include directives, 1 macro definition, 1 function)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "render_response",
        "log_line",
      ],
      "range": {
        "end": 746,
        "start": 413,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "c",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.cpp (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "parse_config",
      ],
      "range": {
        "end": 196,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 2 sibling nodes (1 include directive, 1 function)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "render_response",
        "log_line",
      ],
      "range": {
        "end": 625,
        "start": 327,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "cpp",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.cs (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "ConfigParser",
      ],
      "range": {
        "end": 191,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 2 sibling declarations (1 using directive, 1 class)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "ResponseRenderer",
        "LineLogger",
      ],
      "range": {
        "end": 673,
        "start": 346,
      },
      "reason": {
        "explanation": "collapsed 2 sibling classes",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "c_sharp",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.go (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "ParseConfig",
        "Registry",
        "Add",
      ],
      "range": {
        "end": 412,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 5 sibling nodes (1 package clause, 1 import declaration, 1 function, 1 type declaration, 1 method)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "Normalise",
        "LogLine",
      ],
      "range": {
        "end": 892,
        "start": 606,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "go",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.java (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "ConfigParser",
      ],
      "range": {
        "end": 232,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 3 sibling nodes (1 package declaration, 1 import declaration, 1 class)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "ResponseRenderer",
        "LineLogger",
      ],
      "range": {
        "end": 688,
        "start": 376,
      },
      "reason": {
        "explanation": "collapsed 2 sibling classes",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "java",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.js (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "readConfig",
      ],
      "range": {
        "end": 254,
        "start": 20,
      },
      "reason": {
        "explanation": "collapsed 2 sibling declarations (1 import statement, 1 function)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "renderResponse",
        "normalise",
      ],
      "range": {
        "end": 710,
        "start": 385,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "javascript",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.kt (snapshot) 1`] = `
{
  "elisions": [
    {
      "range": {
        "end": 121,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 2 sibling nodes (1 package header, 1 import list)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "parseConfig",
        "renderResponse",
        "logLine",
      ],
      "range": {
        "end": 633,
        "start": 247,
      },
      "reason": {
        "explanation": "collapsed 3 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "kotlin",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.php (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "parse_config",
      ],
      "range": {
        "end": 186,
        "start": 7,
      },
      "reason": {
        "explanation": "collapsed 2 sibling nodes (1 statement, 1 function)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "render_response",
        "log_line",
      ],
      "range": {
        "end": 609,
        "start": 317,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "php",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.py (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "load_config",
        "cached_count",
        "Registry",
      ],
      "range": {
        "end": 472,
        "start": 23,
      },
      "reason": {
        "explanation": "collapsed 5 sibling nodes (1 statement, 1 import statement, 2 functions, 1 class)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "format_user",
        "forget_user",
      ],
      "range": {
        "end": 933,
        "start": 732,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "python",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.rb (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "load_config",
      ],
      "range": {
        "end": 173,
        "start": 51,
      },
      "reason": {
        "explanation": "collapsed 2 sibling nodes (1 statement, 1 method)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "render_response",
        "log_line",
      ],
      "range": {
        "end": 505,
        "start": 282,
      },
      "reason": {
        "explanation": "collapsed 2 sibling methods",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "ruby",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.rs (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "parse_config",
        "normalise",
      ],
      "range": {
        "end": 384,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "Registry",
        "Registry",
      ],
      "range": {
        "end": 797,
        "start": 584,
      },
      "reason": {
        "explanation": "collapsed 2 sibling declarations (1 struct, 1 impl block)",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "rust",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.sh (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "load_config",
      ],
      "range": {
        "end": 145,
        "start": 20,
      },
      "reason": {
        "explanation": "collapsed 2 sibling nodes (1 command, 1 function)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "render_response",
        "log_line",
      ],
      "range": {
        "end": 445,
        "start": 231,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "bash",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.swift (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "parseConfig",
      ],
      "range": {
        "end": 184,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 2 sibling declarations (1 import declaration, 1 function)",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "renderResponse",
        "logLine",
      ],
      "range": {
        "end": 579,
        "start": 309,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "swift",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.ts (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "parseConfig",
        "normalisePath",
      ],
      "range": {
        "end": 387,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "renderResponse",
        "logLine",
      ],
      "range": {
        "end": 986,
        "start": 625,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "typescript",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans functions.ts, no focus (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "parseConfig",
        "normalisePath",
        "handleRequest",
        "renderResponse",
        "logLine",
      ],
      "range": {
        "end": 986,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 5 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "typescript",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans long-doc.ts (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "readAll",
        "sleep",
      ],
      "range": {
        "end": 419,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
    {
      "names": [
        "formatDuration",
        "clamp",
      ],
      "range": {
        "end": 3596,
        "start": 3218,
      },
      "reason": {
        "explanation": "collapsed 2 sibling functions",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "typescript",
  "planner": "structural/v1",
}
`;

exports[`the structural planner > plans mixed.tsx (snapshot) 1`] = `
{
  "elisions": [
    {
      "names": [
        "BadgeProps",
        "Badge",
      ],
      "range": {
        "end": 364,
        "start": 0,
      },
      "reason": {
        "explanation": "collapsed 3 sibling declarations (1 import statement, 1 interface, 1 function)",
        "rule": "sibling-collapse",
      },
    },
  ],
  "language": "tsx",
  "planner": "structural/v1",
}
`;
